# arrow-datafusion

./: Cargo.toml
datafusion/common/src/display/: mod.rs  tree.rs
datafusion/core/src/: physical_planner.rs
datafusion/expr/src/: expr.rs
datafusion/expr/src/logical_plan/: builder.rs  display.rs  mod.rs  plan.rs  tree_node.rs
datafusion/optimizer/src/: common_subexpr_eliminate.rs  decorrelate_dependent_join.rs  decorrelate_general.rs  deliminator.rs  rewrite_dependent_join.rs
datafusion/optimizer/src/optimize_projections/: mod.rs
datafusion/optimizer/src/test/: mod.rs
datafusion/physical-plan/src/: display.rs  lib.rs  render_tree.rs  unnest.rs
datafusion/proto/src/logical_plan/: mod.rs
datafusion/sql/src/: planner.rs  select.rs
datafusion/sql/src/expr/: identifier.rs  subquery.rs
datafusion/sql/src/relation/: mod.rs
datafusion/sql/src/unparser/: plan.rs
datafusion/sqllogictest/test_files/: cte.slt  cte_temp.slt  debug.slt  joins.slt  subquery.slt
datafusion/sqllogictest/test_files/tpch/: q11.after.mock  q11.mock  q11.mock.1  util.bash
datafusion/substrait/src/logical_plan/producer/rel/: mod.rs
playground/: Cargo.toml  sql  students.csv  test.sql  txt.csv  txt2.csv
playground/src/: main.rs  shj.rs  test.rs  util.rs  view_test.rs  window.rs
